--- a/src/Raven.Studio/wwwroot/Content/css/pages/about.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/about.less
@@ -267,7 +267,7 @@
             font-size: 40px;
         }
 
-        &.valid, &.professional-support {
+        &.valid, &.professional-support, &.production-support {
             color: @brand-success;
         }
 
