RavenDB-10004 The reported time in the wizard is UTC, but we typically use the local time machine time for those IIRC

--- a/src/Raven.Studio/wwwroot/App/views/shell/registration.html
+++ b/src/Raven.Studio/wwwroot/App/views/shell/registration.html
@@ -54,7 +54,10 @@
                     </button>
                 </div>
 
-                <button type="submit" data-bind="css: { 'btn-spinner': isBusy }, enable: !isBusy()" class="btn btn-primary">Submit</button>
+                <button type="submit" data-bind="css: { 'btn-spinner': isBusy }, enable: !isBusy()" class="btn btn-primary">
+                    <i class="icon-check"></i>
+                    <span>Submit</span>
+                </button>
             </div>
         </div>
     </form>
