--- a/src/Raven.Studio/wwwroot/Content/css/pages/export-progress.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/export-progress.less
@@ -1,4 +1,19 @@
 ﻿#exportModal {
+    .export-messages-container {
+        position: relative;
+        &:before {
+            content: 'All dates are in UTC';
+            top: 0;
+            left: 0;
+            position: absolute;
+            background-color: @panel-info-bg;
+            font-size: 12px;
+            color: @panel-info-text;
+            padding: 2px 5px;
+            transform: translateY(-100%);
+        }
+    }
+    
     .export-messages {
         height: 250px;
         overflow: auto;
