RavenDB-11318 Certificates page: Hide buttons when authN is off

--- a/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
+++ b/src/Raven.Studio/wwwroot/App/views/manage/certificates.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="margin-bottom">
+    <div class="margin-bottom" data-bind="visible: usingHttps">
         <button class="btn btn-primary" data-bind="click: enterGenerateCertificateMode">
             <i class="icon-magic-wand"></i>
             <span>Generate client certificate</span>
