--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -141,6 +141,10 @@ h6 {
     white-space: nowrap;
 }
 
+.whitespace-initial {
+    white-space: initial !important;
+}
+
 .visible-block {
     display: block;
 }
@@ -1218,13 +1222,13 @@ pre {
                 display: block;
 
                 &:before {
-                    left: 150px;
+                    left: 170px;
                     top: 13px;
                 }
 
                 &:after {
                     top: 7px;
-                    left: 112px;
+                    left: 132px;
                 }
             }
 
@@ -1232,7 +1236,7 @@ pre {
                 position: absolute;
 
                 &:checked + label:after {
-                    left: 130px;
+                    left: 150px;
                 }
             }
         }
@@ -1244,10 +1248,15 @@ pre {
         margin-bottom: 2px;
         display: flex;
         position: relative;
-        height: 36px;
         flex-wrap: nowrap;
-        min-width: 250px;
-        flex-grow: 1;
+
+        @media (min-width: @screen-sm) {
+            height: 36px;
+        }
+
+        &.grow-2 {
+            grid-column-start: span 2;
+        }
 
         .dropdown-menu {
             //width: 100%;
@@ -1255,7 +1264,7 @@ pre {
 
         .properties-label {
             .btn-sm;
-            flex: 0 0 110px;
+            flex: 0 0 130px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
