RavenDB-10868 spinners on dashboard

--- a/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/dashboard.less
@@ -353,6 +353,7 @@
         line-height: 20px;
         text-align: center;
         min-width: 160px;
+        position: relative;
     }
 
     .infogrid-graph {
