RavenDB-11254 Allow to change Priority and Lock of index when global indexing is paused/disabled

--- a/src/Raven.Studio/wwwroot/App/views/database/indexes/indexes.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/indexes/indexes.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-default dropdown-toggle" title="Change the options of selected indexes"
-                                            data-bind="enable: $root.globalIndexingStatus() === 'Running' && selectedIndexesName().length && !spinners.globalLockChanges(), 
+                                            data-bind="enable: selectedIndexesName().length && !spinners.globalLockChanges(), 
                                                        css: { 'btn-spinner': spinners.globalLockChanges() }" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-lock"></i><span>Set lock mode...</span>
                                         <span class="caret"></span>
@@ -215,7 +215,7 @@
                     <span class="properties-label">Priority:</span>
                     <div class="btn-group properties-value">
                         <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown"
-                                data-bind="css: { 'btn-spinner': _.includes($root.spinners.localPriority(), name) }, enable: $root.globalIndexingStatus() === 'Running' && !_.includes($root.spinners.localPriority(), name)">
+                                data-bind="css: { 'btn-spinner': _.includes($root.spinners.localPriority(), name) }, enable: !_.includes($root.spinners.localPriority(), name)">
                             <span data-bind="visible: isNormalPriority()">
                                 <i class="icon-check"></i>
                                 <span>Normal</span>
@@ -253,8 +253,7 @@
                     <span class="properties-label">Mode:</span>
                     <div class="btn-group properties-value">
                         <button type="button" class="btn set-size dropdown-toggle" data-toggle="dropdown"
-                                data-bind="css: { 'btn-spinner': _.includes($root.spinners.localLockChanges(), name) },
-                                           enable: $root.globalIndexingStatus() === 'Running' && !_.includes($root.spinners.localLockChanges(), name)">
+                                data-bind="css: { 'btn-spinner': _.includes($root.spinners.localLockChanges(), name) }, enable: !_.includes($root.spinners.localLockChanges(), name)">
                             <span data-bind="visible: lockMode() === 'Unlock'">
                                 <i class="icon-unlock"></i><span>Unlocked</span>
                             </span>
