RavenDB-9669 ability to choose factory name in sql replication

--- a/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/settings/connectionStringSql.html
@@ -5,6 +5,17 @@
                placeholder="Enter a name for the connection string">           
     </div>
 </div>
+<div class="form-group" data-bind="validationElement: factoryName">
+    <label class="control-label">Factory</label>
+    <div class="flex-grow">
+        <button type="button" class="btn btn-block dropdown-toggle text-left" data-toggle="dropdown" aria-expanded="false">
+            <span data-bind="text: factoryName()"></span> <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" data-bind="foreach: $data.constructor.sqlProviders">
+            <li><a href="#" data-bind="text: $data, click: _.partial($parent.factoryName, $data)"></a></li>
+        </ul>
+    </div>
+</div>
 <div class="form-group" data-bind="validationElement: connectionString">
     <label class="control-label">Connection string</label>
     <div class="flex-grow">
